# azkaban

./: Cargo.toml  README.md
src/: auth.rs  cli.rs  config.rs  cryptengine.rs  datacrypt.rs  dbmanagers.rs  keycrypt.rs  main.rs  memguard.rs  nonceimpl.rs  utils.rs
src/protobuf_local/: KeyAndNonce.proto  KeyAndNonce.rs  mod.rs
